cleaned code + improved responsibility + fixed not centred elements

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -2,55 +2,108 @@
 *{
   font-family: Arial, Helvetica, sans-serif;
 }
+
+header{
+  display: flex;
+}
+
 body{
-  background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(6,4,138,1) 100%);;
+  /* background */
+  background: rgba(6,4,138,1);
+  background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(6,4,138,1) 100%);
 background-size:cover;
 background-repeat: no-repeat;
 background-attachment: fixed;
+  /* background */
+  /* display */
 display: flex;
 flex-direction: column;
 margin: 0;
+  /* display */
 
   
 }
 .wrapper{
   display: flex;
   width: 100%;
-  margin: 0 auto;
+  margin-inline: auto;
 
 }
-.site-logo img{
-  max-width: 30%;
-
+.linkboxes{
+  display: flex;
+  flex-direction: column;
+  width: 20%;
+  aspect-ratio: 1;
+  background: url('data:image/svg+xml;utf8,<svg viewBox="0 0 160 160" xmlns="http://www.w3.org/2000/svg" version="1.1" fill="%23c62e65"><path d="M 0 80 C 0 0, 0 0, 80 0 S 160 0, 160 80, 160 160 80 160, 0 160, 0 80 " transform=" rotate( 0, 80, 80 ) translate( 0, 0 ) "></path></svg>');
+  background-repeat: no-repeat;
+  place-items: center;
 }
-.menu-toggle{
-  display: none;
-}
-.darker{
-  background-color: #d3d3d3;
-  position: relative;
-  top: 2.8em;
-  margin: 0;
-
- }
 b{
   color: #02B7DE;
-font-weight: 900;
+
 }
+.linkboxes .links {
+  text-decoration: none;
+  color: black;
+  text-align: center;
+  width: 20%;
+}
+.linkboxes .hardness-tag{
+  color:#02B7DE;
+}
+/* footer */
+/* footer separator */
+hr{
+  display: block;
+  height: .5rem;
+  background-color: white;
+  border: none;
+
+ }
+footer{
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+}
+/* footer nav list */
+ footer ul{
+  list-style-type: none;
+  display: block;
+  position: relative;
+ }
+ footer li{
+  margin: 0.5em;
+ }
+ footer a{
+  color: white;
+  text-decoration: none;
+
+ }
+ /* signature */
+ footer p{
+  color:white;
+ }
+
 
 
 @media  (max-width: 600px){
-  .wrapper{
-    padding: 0;
-  }
   header{
-    display: flex;
     border-bottom: #d3d3d3 3px solid;
     align-items: center;
-    
   }
+  .site-logo img{
+    margin-top: 0;
+    margin-left: 0.25em;
+    max-width: 40%;
  
- 
+  }
+  /* line under header */
+  .darker{
+    background-color: #d3d3d3;
+    position: relative;
+    top: 2.8em;
+    margin: 0;
+   }
+ /* hiding useless objects */
   aside{
     display: none;
   }
@@ -61,60 +114,48 @@ font-weight: 900;
   h1{
     display: none;
   }
+  /* main display */
   main{
     display: flex;
     flex-direction: row;
     place-content: center;
     align-items: center;
     flex-wrap: wrap;
-    
   }
+    /* BUTTONS */
 
-  .linkboxes{
-display: flex;
-flex-direction: column;
-   
-    width: 48%;
-    
-    height: 48vw;
-
-    background: url('data:image/svg+xml;utf8,<svg viewBox="0 0 160 160" xmlns="http://www.w3.org/2000/svg" version="1.1" fill="%23c62e65"><path d="M 0 80 C 0 0, 0 0, 80 0 S 160 0, 160 80, 160 160 80 160, 0 160, 0 80 " transform=" rotate( 0, 80, 80 ) translate( 0, 0 ) "></path></svg>');
-    background-repeat: no-repeat;
-    place-items: center;
-    margin-right: 0.35em;
-    margin-top: .5em;
-
-    padding-top: 14vw;
-  
+    .linkboxes{
+      width: 48%;
+      margin-right: 0.35em;
+      margin-top: .5em;
+      padding-top: 14vw;
+    }
+ /* html/css tag in button */
+  b{
+  font-weight: 900;
   }
-
-
-  .linkboxes a {
-
+  /* links */
+  .linkboxes .links {
     position: relative;
     bottom: 5px;
-    text-decoration: none;
-    color: black;
-
+    margin-top: 0;
     font-size: 10vw;
-    text-align: center;
     margin-bottom: 10vw;
-    
-    
-
+    width: 100%;
 }
-.linkboxes p{
 
+.linkboxes .hardness-tag{
   font-size: 4vw;
   padding: 0;
   margin: 0;
-  color:#02B7DE;
   margin-top: 10vw;
- 
 }
-i{
-  font-style: normal;
+/* quiz button hardness tag higher */
+#tag-higher{
+  position: relative;
+  bottom: 2px;
 }
+/* setting non fitable text to lower font size */
 .big{
   font-size: 8vw;
   font-style: normal;  
@@ -125,75 +166,33 @@ i{
   font-style: normal;
 }
 
-  .site-logo img{
-    margin-top: 0;
-    margin-left: 0.25em;
-    max-width: 40%;
- 
-  }
-  .menu-toggle{
- 
-    position: relative;
-    z-index: -1;
-  }
-  .menu-toggle input{
-    position: absolute;
-    width:40px;
-    cursor: pointer;
-    opacity: 0; 
-    z-index: 2;
-    -webkit-touch-callout: none;
-  }
-  .menu-view{
-  display: block; 
-  max-width: 20% ;
-  height: 0.25rem;
-  margin-bottom: 5px; /* create some spacing between the span elements. */
-  position: relative; /* allow for positioning changes in relation to the parent div.*/
-  background: #02B7DE;
-  border-radius: 3px;
-  z-index: 1; /* ensure that the span element is under the checkbox */
- 
-  } 
   /* footer */
-
- hr{
-  display: block;
+/* footer separator */
+hr{
   height: 3px;
-  background-color: white;
-  border: none;
-
  }
 footer{
   font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
 }
- footer p{
-  color:white;
-  font-size: 6vw;
-  text-align: center;
- }
+/* footer nav list */
  footer ul{
-  list-style-type: none;
-  display: block;
-  text-align: center;
-  position: relative;
   margin-bottom: 20px;
-
-
  }
  footer li{
-  margin: 5px;
- 
+  margin: 0.5em;
  }
  footer a{
-  color: white;
   font-size: 6vw;
-  text-decoration: none;
 
  }
-
+ /* signature */
+ footer p{
+  font-size: 6vw;
+ }
+/* some responsiwe improvements */
  @media (max-width: 295px) {
-  .linkboxes a {
+  .linkboxes .links {
     padding-top: 5vw;
     font-size: 7vw;
   }
@@ -201,17 +200,9 @@ footer{
     font-size: 5vw;
   }
 
-  .linkboxes p {
-    position: sticky;
-    margin-top: 10px;
   }
+
 }
-@media (max-width: 150px) {
-  .linkboxes p {
-    position: relative;
-    bottom: 5vw;
-  }
-}
-/* button media */
-}
+
+
 
